[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/MainHUD.gd" type="Script" id=1]
[ext_resource path="res://Textures/Scenes/MainScene.jpg" type="Texture" id=2]
[ext_resource path="res://Textures/UI/Button_Setting2.png" type="Texture" id=3]
[ext_resource path="res://Textures/UI/Button_Setting1.png" type="Texture" id=4]
[ext_resource path="res://UIScenes/SettingButton.gd" type="Script" id=5]
[ext_resource path="res://Textures/UI/Frame_Debt.png" type="Texture" id=6]
[ext_resource path="res://Textures/UI/ProgressBar_Time2.png" type="Texture" id=7]
[ext_resource path="res://Textures/UI/ProgressBar_Time1.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Button_SettingPressed"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Fonts/tahomabd.ttf"

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 1
outline_color = Color( 0.0980392, 0.0862745, 0.0705882, 1 )
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Fonts/tahomabd.ttf"

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 3
font_data = SubResource( 4 )

[node name="MainHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GameOver" type="CanvasLayer" parent="."]

[node name="Label_GameOver" type="Label" parent="GameOver"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -153.0
margin_top = 247.0
margin_right = 167.0
margin_bottom = 296.0
text = "Day Left : 9999"
align = 1
valign = 1

[node name="ButtonNewGame" type="Button" parent="GameOver"]
margin_left = 449.0
margin_top = 410.0
margin_right = 605.0
margin_bottom = 479.0
text = "NewGame"

[node name="InGame" type="CanvasLayer" parent="."]

[node name="ButtonGive" type="Button" parent="InGame"]
margin_left = 449.0
margin_top = 410.0
margin_right = 605.0
margin_bottom = 479.0
text = "Give Item"

[node name="ButtonSell" type="Button" parent="InGame"]
margin_left = 449.0
margin_top = 503.0
margin_right = 605.0
margin_bottom = 572.0
text = "Sell Item"

[node name="Label_DayLeft" type="Label" parent="InGame"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_right = 160.0
margin_bottom = 49.0
text = "Day Left : 9999"
align = 1
valign = 1

[node name="Label_DebtLeft" type="Label" parent="InGame"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 62.0
margin_right = 160.0
margin_bottom = 111.0
text = "Debt Left : 9999"
align = 1
valign = 1

[node name="GodChoice" type="CanvasLayer" parent="InGame"]
offset = Vector2( 0, 50 )
transform = Transform2D( 1, 0, 0, 1, 0, 50 )

[node name="ButtonChoice1" type="Button" parent="InGame/GodChoice"]
margin_left = 226.0
margin_top = 229.0
margin_right = 382.0
margin_bottom = 298.0
text = "Choice1"

[node name="ButtonChoice2" type="Button" parent="InGame/GodChoice"]
margin_left = 440.0
margin_top = 184.0
margin_right = 596.0
margin_bottom = 253.0
text = "Choice2"

[node name="ButtonChoice3" type="Button" parent="InGame/GodChoice"]
margin_left = 652.0
margin_top = 232.0
margin_right = 808.0
margin_bottom = 301.0
text = "Choice3"

[node name="NPCChoice" type="CanvasLayer" parent="InGame"]

[node name="ButtonNPCChoice1" type="Button" parent="InGame/NPCChoice"]
margin_left = 223.0
margin_top = 164.0
margin_right = 379.0
margin_bottom = 233.0
text = "Sell Item"

[node name="ButtonNPCChoice2" type="Button" parent="InGame/NPCChoice"]
margin_left = 658.0
margin_top = 165.0
margin_right = 814.0
margin_bottom = 234.0
text = "Sell Item"

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 39.0
margin_top = 19.0
margin_right = 105.0
margin_bottom = 83.0
rect_pivot_offset = Vector2( 33, 32 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureButton"]
anims/Button_SettingPressed = SubResource( 1 )

[node name="DebtAmount" type="Control" parent="."]
margin_left = 120.0
margin_right = 346.0
margin_bottom = 81.0

[node name="TextureRect" type="TextureRect" parent="DebtAmount"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="DebtAmount"]
margin_left = 50.0
margin_top = 32.0
margin_right = 205.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
text = "-100000000"
align = 2
valign = 1

[node name="DayLeft" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -207.0
margin_top = 13.0
margin_right = -49.0
margin_bottom = 95.0
__meta__ = {
"_edit_group_": true
}

[node name="TextureProgress" type="TextureProgress" parent="DayLeft"]
rect_scale = Vector2( -1, 1 )
rect_pivot_offset = Vector2( 79, 0 )
value = 60.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
fill_mode = 4
radial_initial_angle = 90.0
radial_fill_degrees = 180.0
radial_center_offset = Vector2( 0, -40 )

[node name="Label" type="Label" parent="DayLeft"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -33.5
margin_top = -8.0
margin_right = 33.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 5 )
text = "32"
align = 1
valign = 1

[connection signal="button_down" from="TextureButton" to="TextureButton" method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="TextureButton" method="_on_TextureButton_button_up"]
